# phie

./: .gitignore  .rultor.yml  Cargo.toml  Makefile  README.md  REUSE.toml  _typos.toml  program.h
.github/workflows/: actionlint.yml  cargo.yml  copyrights.yml  make.yml  pdd.yml  reuse.yml  tarpaulin.yml  typos.yml  xcop.yml  yamllint.yml
include/: main.h
src/: atom.rs  atoms.rs  basket.rs  cli.rs  dabox.rs  data.rs  dbox.rs  directives.rs  emu.rs  lib.rs  loc.rs  locator.rs  object.rs  objects.cpp  objects.rs  obs.rs  path.rs  perf.rs  primitives.rs  register.rs  rust_atom.rs  rust_engine.rs  universe.rs
src/emu/: dataization.rs  tests.rs  tests_transitions.rs  transitions.rs
src/rust_atom/: compilation.rs  execution.rs
src/universe/: cache.rs  operations.rs
src/xmir/: mod.rs
tests/: cli_test.rs  custom_executor_test.rs  fibonacci_test.rs  xmir_test.rs
tests/resources/: written_fibonacci_test  written_sum_test  written_test_example
