[package]
name = "phie"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/phie"
description = "Experimental emulator of a machine that understands 𝜑-calculus expressions"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/phie"
keywords = ["eolang", "compiler", "emulator", "oop"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
env_logger = "0.10.0"
hex = "0.4.3"
strum = "0.24.1"
strum_macros = "0.24.3"
itertools = "0.10.5"
arr_macro = "0.1.3"
log = "0.4.17"
ctor = "0.1.26"
rstest = "0.15.0"

[dev-dependencies]
assert_cmd = "2.0.6"
simple_logger = "4.0.0"
clippy = "0.0.302"
