[package]
name = "phie"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/phie"
description = "Experimental emulator of a machine that understands 𝜑-calculus expressions"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/phie"
keywords = ["eolang", "compiler", "emulator", "oop"]
categories = ["command-line-utilities", "development-tools", "emulators", "virtualization"]

[dependencies]
regex = "1.10.4"
lazy_static = "1.4.0"
env_logger = "0.10.0"
hex = "0.4.3"
strum = "0.24.1"
strum_macros = "0.25.1"
itertools = "0.11.0"
arr_macro = "0.2.1"
log = "0.4.19"
ctor = "0.2.4"
rstest = "0.18.1"

[dev-dependencies]
assert_cmd = "2.0.11"
simple_logger = "4.2.0"
