[package]
name = "phie"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/phie"
description = "Experimental emulator of a machine that understands 𝜑-calculus expressions"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/phie"
keywords = ["eolang", "compiler", "emulator", "oop"]
categories = ["command-line-utilities", "development-tools", "emulators", "virtualization"]

[dependencies]
regex = "1.12"
lazy_static = "1.5"
env_logger = "0.11"
strum_macros = "0.27"
itertools = "0.14"
arr_macro = "0.2"
log = "0.4"
ctor = "0.6"
rstest = "0.26"

[dev-dependencies]
assert_cmd = "2.0"
simple_logger = "5.1"
predicates = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
